# banksim

./: CMakeLists.txt  Dockerfile  README.md
src/: CMakeLists.txt  main.cpp
staruml/: simulator.mdj
test/: CMakeLists.txt
